--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+ <html lang="en">
+      <head>
+           <meta charset="UTF-8"/>
+          <title>Student Bio</title>
+          <style>
+          .contact {
+               float:right;
+               width: 30%;
+          }
+          .h1 {
+               float: left;
+               width: 30%;
+          }
+          .s-b {
+               font-size: 60px;
+               text-align: center;
+               margin-bottom: 15px;
+               background-color: rgb(34, 37, 37);
+               color: white;
+          }
+          body {background-color: lightgray;}
+          </style>
+      </head>
 <body>
-    <h1>hello</h1>
+ <header></header>
+     
+      
+      <h1 class="s-b">Student Bio</h1>
+ 
+
+     <div class="h1">
+      <h2>Kimberly Morgan</h2>
+
+     <img src="file:///Users/kimberlymorgan/Desktop/Photo%20on%2012-2-19%20at%207.27%20PM%20%232.jpg" 
+      alt="profile photo" width="255" height="200"/>
+
+     <p>I'm 24 years old, born & raised in Orlando, & i'm currently a part time student at UCF West.  </p>
+     </div>
+
+     <div class="contact">          
+     <h2>Contact Info</h2>
+     <ul>
+          <li><strong>Email: </strong><a href="morgan.kimberly1995@gmail.com"> morgan.kimberly1995@gmail.com</a></li>
+          <li><strong>Github: </strong><a href="https://github.com/Kimberly-Morgan">https://github.com/Kimberly-Morgan</a></li>
+          <li><strong>Portfolio: </strong><a href="https://www.linkedin.com/in/kimberly-morgan-6a7876197/"> Linked In</a></li>
+     </ul>
+     </div>
 </body>
 </html>
