--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <div class="h1">
       <h2>Kimberly Morgan</h2>
 
-     <img src="file:///Users/kimberlymorgan/Desktop/Photo%20on%2012-2-19%20at%207.27%20PM%20%232.jpg" 
+     <img src="Selfie.jpg" 
       alt="profile photo" width="255" height="200"/>
 
      <p>I'm 24 years old, born & raised in Orlando, & i'm currently a part time student at UCF West.  </p>
